@@ -28,6 +28,7 @@ Features
 ========
 
  * support tracking of github issues
+ * instantiate package api call for projects building service packs 
 
 Changes on purpose:
 ===================
